NEXT-23445 - Categories Layout section preview update section preview

--- a/src/Administration/Resources/app/administration/src/module/sw-cms/component/sw-cms-page-form/sw-cms-page-form.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-cms/component/sw-cms-page-form/sw-cms-page-form.html.twig
@@ -38,20 +38,11 @@
                     {% endblock %}
 
                     <div class="sw-cms-page-form__device-actions">
-                        <sw-icon
-                            name="regular-mobile"
-                            size="20"
-                        />
+                        <sw-icon :name="getDeviceActive('mobile', section)" />
 
-                        <sw-icon
-                            name="regular-tablet"
-                            size="20"
-                        />
+                        <sw-icon :name="getDeviceActive('tablet', section)" />
 
-                        <sw-icon
-                            name="regular-desktop"
-                            size="20"
-                        />
+                        <sw-icon :name="getDeviceActive('desktop', section)" />
                     </div>
                 </div>
                 {% endblock %}
@@ -131,23 +122,11 @@
                 >
                     <template #header-right>
                         <div class="sw-cms-page-form__block-device-actions">
-                            <sw-icon
-                                name="regular-mobile"
-                                size="20"
-                                :class="`sw-cms-page-form__device-action-icon ${getDeviceActive(block, 'mobile')}`"
-                            />
+                            <sw-icon :name="getDeviceActive('mobile', section, block)" />
 
-                            <sw-icon
-                                name="regular-tablet"
-                                size="20"
-                                :class="`sw-cms-page-form__device-action-icon ${getDeviceActive(block, 'tablet')}`"
-                            />
+                            <sw-icon :name="getDeviceActive('tablet', section, block)" />
 
-                            <sw-icon
-                                name="regular-desktop"
-                                size="20"
-                                :class="`sw-cms-page-form__device-action-icon ${getDeviceActive(block, 'desktop')}`"
-                            />
+                            <sw-icon :name="getDeviceActive('desktop', section, block)" />
                         </div>
                     </template>
 
@@ -158,6 +137,12 @@
                         :key="blockIndex"
                         class="sw-cms-page-form__element-config"
                     >
+
+                        <template v-if="displayNotification(section, block)">
+                            <sw-alert variant="info">
+                                {{ $tc('sw-cms.blocks.blockDisableState') }}
+                            </sw-alert>
+                        </template>
 
                         <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
                         {% block sw_cms_page_form_element_config %}
