NEXT-23031 - Dropdown icon in order details is smaller than expected

--- a/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
@@ -55,7 +55,7 @@
                             square
                         >
                             <sw-icon
-                                name="regular-chevron-down-xxs"
+                                name="regular-chevron-down-xs"
                                 decorative
                             />
                         </sw-button>
