--- a/src/Core/Framework/Resources/views/snippets/address/country.html.twig
+++ b/src/Core/Framework/Resources/views/snippets/address/country.html.twig
@@ -1,3 +1,4 @@
+{# @internal #}
 {% block sw_snippet_element_country %}
     {% if address.country %}
         {{ address.country.translated.name }}
