--- a/src/Core/Framework/Resources/views/snippets/address/country_state.html.twig
+++ b/src/Core/Framework/Resources/views/snippets/address/country_state.html.twig
@@ -1,3 +1,4 @@
+{# @internal #}
 {% block sw_snippet_element_country_state %}
     {% if address.countryState %}
         {{ address.countryState.translated.name }}<br/>
