Implement Copy Button for Tracking Code

--- a/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-user-card/sw-order-user-card.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-user-card/sw-order-user-card.html.twig
@@ -385,6 +385,10 @@
                                 :link="renderTrackingUrl(trackingCode, delivery.shippingMethod)"
                                 :disabled="!renderTrackingUrl(trackingCode, delivery.shippingMethod)"
                             >{{ trackingCode }}</sw-button>
+                            <sw-field-copyable
+                                :copyable-text="renderTrackingCodeList(delivery.trackingCodes)"
+                                >
+                            </sw-field-copyable>
                             {% endblock %}
                         </dd>
                         {% endblock %}
